segunda forma de formulario

--- a/index.html.html
+++ b/index.html.html
@@ -16,8 +16,8 @@
                     { nome: "Lucas", codigo: "1914" },
                     { nome: "Aline", codigo: "2015" },
                 ];
-                $scope.adicionarCliente = function() {
-                    $scope.clientes.push({nome: $scope.nome, codigo: $scope.codigo})
+                $scope.adicionarCliente = function(cliente) {
+                    $scope.clientes.push(angular.copy(cliente))
                 }
             });
     </script>
@@ -38,9 +38,9 @@
         </table>
         <hr>
         <div class="formulario">
-            <input class="form-control" type="text" ng-model="nome" placeholder="Nome">
-            <input class="form-control" type="text" ng-model="codigo" placeholder="Código">
-            <button class="btn btn-primary btn-block" ng-click="adicionarCliente()">Adicionar Cliente</button>
+            <input class="form-control" type="text" ng-model="cliente.nome" placeholder="Nome">
+            <input class="form-control" type="text" ng-model="cliente.codigo" placeholder="Código">
+            <button class="btn btn-primary btn-block" ng-click="adicionarCliente(cliente)">Adicionar Cliente</button>
         </div>
     </div>
 </body>
